fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,9 @@ button{
 
 @media (max-width:1290px){
   .container{
-    padding: 2%;
+    padding-left: 3%;
+  padding-right: 3%;
+    
   }
 }
 
