--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -25,10 +25,11 @@ body{
 }
 
 .navList{
-    margin-right: 20px;
+    margin-right: 40px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .navList ul{
